apps/hello-world/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
      - name: httpd-app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=$(WELCOME_MESSAGE)"
        ports:
        - containerPort: 5678
---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-service

spec:
  selector:
    app: httpd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
